--- a/style.css
+++ b/style.css
@@ -4,16 +4,31 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  margin: 0;
+  margin: 0%;
   background-color: #ffe3de;
 }
 
 header {
-  padding: 1rem;
-  display: flex;
-  justify-content: flex-end;
+  padding: 0 1rem 0 1rem;
   background-color: #dd2929;
+  height: 80px;
 }
+#form {
+  /* display: inline-block;
+  width: 100%; */
+  display: flex;
+  justify-content: space-between;
+}
+.name {
+  font-family: 'Gloria Hallelujah', sans-serif;
+  /* float: left; */
+  font-size: 25px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding-left: 5px;
+  margin-top: 10px;
+}
+
 .search {
   /* background-color: #5db7f0; */
   background-color: #0db7f0;
@@ -23,6 +38,9 @@ header {
   font-size: 1rem;
   padding: 0.5rem 1rem;
   color: black;
+  /* float: right; */
+  height: 50px;
+  margin-top: 15px;
 }
 
 .search::placeholder {
